--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <!-- About Section -->
     <div class="about-section">
         <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempore!</p>
+        <p>I am a junior at sunnyslope highschool, I enjoy coding nd hanging out with friends in my spare time</p>
     </div>
 
     <!-- Project Section -->
